Commenting, cleanup, refactoring...

--- a/DNS Resolver.adoc
+++ b/DNS Resolver.adoc
@@ -11,8 +11,8 @@ It's a package that implements, in pure Java, a DNS resolver.  Shocking surprise
 == Features
 The DNS Resolver has a few features:
 
-* It can resolve from accessible recursive DNS servers, such as those provided by Google, OpenDNS, and many ISPs.  The main advantages of this approach is reduced network traffic between the DNS Resolver and the recursive DNS server, and (possibly) speed due to the recursive DNS server's large cache shared across many users.  The disadvantages include allowing the owner of the recursive DNS server to snoop on things like what web sites you visit, the need to provision one or more recursive DNS servers to run the DNS Resolver, and being subject to the recursive DNS server's blacklisting of domain names that they disapprove of.
-* It can resolve by iteratively interrogating authoritative DNS servers.  This is the same approach that the recursive DNS servers use themselves.  The main advantages of this approach are security and privacy (the Googles of the world don't know what you're doing), the absence of any provisioning requirement, and the absence of any sort of censorship.  The disadvantages include more network traffic between the DNS Resolver and the Internet, and (possibly) lower speed because there are fewer cached records.
+* It can resolve by forwarding queries to accessible recursive DNS servers, such as those provided by Google, OpenDNS, and many ISPs.  The main advantages of this approach is reduced network traffic between the DNS Resolver and the recursive DNS server, and (possibly) speed due to the recursive DNS server's large cache shared across many users.  The disadvantages include allowing the owner of the recursive DNS server to snoop on things like what web sites you visit, the need to provision one or more recursive DNS servers to run the DNS Resolver, and being subject to the recursive DNS server's blacklisting of domain names that they disapprove of.
+* It can resolve recursively by interrogating authoritative DNS servers.  This is the same approach that the recursive DNS servers use themselves.  The main advantages of this approach are security and privacy (the Googles of the world don't know what you're doing), the absence of any provisioning requirement, and the absence of any sort of censorship.  The disadvantages include more network traffic between the DNS Resolver and the Internet, and (possibly) lower speed because there are fewer cached records.
 * It has a cache whose size is configurable.  Even a small cache of 1,000 DNS resource records makes a very large difference in the DNS Resolver's performance.
 * It has a convenient Java API that allow synchronous queries (where the calling thread blocks until the answer is available) and asynchronous queries (where the calling thread is not blocked, and the answer is provided by invoking a caller-provided handler).  Whether synchronous or asynchronous, the API provides methods for anything from very specific queries (for instance, for IPv4 addresses) to very general queries (for example, returning all the DNS resource records for a particular domain).
 * The network input/output is all handled using Java's NIO package.  The main benefit of this approach is that a minimum number of threads are used.  In the DNS Resolver, this is particularly relevant when using iterative resolution, as even for a single query to the DNS Resolver there can be dozens of queries to DNS servers all being processed concurrently.
@@ -23,6 +23,8 @@ There are a number of features that one might expect in a DNS resolver that this
 * Reverse lookup: It cannot look up the domain names associated with an IP address.  For example, it will not query with the IPv4 address "42.82.78.210" to see what domain name resolves to that address.
 * Negative caching: It does not cache negative responses.  If you queried for (let's say) "xyz.abc.net" and got an error because that domain name doesn't exist, that error is not cached -- so if you queried for "xyz.abc.net" a second time, that query would not be resolved from the cache, but would instead result in a series of queries to the relevant DNS servers.
 * Authoritative answers: It is a pure resolver, not an authoritative DNS server.  It does not read any zone files.
+* Only the more commonly used DNS resource records are fully implemented: A, AAAA, CNAME, MX, NS, PTR, and TXT.  Other record types are partially decoded into a pseudo-type called UNIMPLEMENTED.  Other record types could easily be implemented if desired.
+* None of the secure DNS resource records or algorithms are implemented.  This is generally unimportant in a resolver.
 * A DNS server of any kind.  It does not listen on the network for queries.  Such a listener could be built, and it could use this DNS Resolver to resolve its queries -- but that is not what this package does.
 
 == Why did the author inflict this monstrosity on us?
